<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/root_layout"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/resultTW"
        android:hint="@string/result_tw_hint"
        android:gravity="center"
        android:textSize="35sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/first_et_hint"
            android:gravity="center_horizontal"
            android:id="@+id/firstET"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/second_et_hint"
            android:gravity="center_horizontal"
            android:id="@+id/secondET"/>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="16dp">
        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/add_sign"
            android:id="@+id/addButton"
            android:textSize="45sp"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/subtract_sign"
            android:id="@+id/subtractButton"
            android:textSize="45sp"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/multiply_sign"
            android:textSize="45sp"
            android:id="@+id/multiplyButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="45sp"
            android:id="@+id/divideButton"
            android:text="@string/divide_sign"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </GridLayout>

</LinearLayout>